central panel buttons added in HTML

--- a/exer3/google.html
+++ b/exer3/google.html
@@ -18,8 +18,15 @@
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">About Us</a></li>
             </div>
-            
         </ul>
-        
+        <div class="central">
+            Google
+            <div class="search">
+                <span>
+                    <input type="text" placeholder="Enter text">
+                    <button type="button">Submit</button>
+                </span>
+            </div>
+        </div>
     </body>
 </html>
