Search engine complete

--- a/exer3/google.html
+++ b/exer3/google.html
@@ -7,25 +7,30 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <ul class="navbar">
-            <div class="logo">
-                <li><img src="images/icon.png" alt="icon.png"></li>
-                <li>Google</li>
+        <div class="body">
+            <ul class="navbar">
+                <div class="logo">
+                    <li><img src="images/icon.png" alt="icon.png"></li>
+                    <li>Bootle</li>
+                </div>
+                <div class="links">
+                    <img class="profile" src="images/Profile.PNG">
+                    <li><a href="#">Images</a></li>
+                    <li><a href="#">Bmail</a></li>
+                    <li><a href="#">About Us</a></li>
+                </div>
+            </ul>
+            <div class="central">
+                <h1>Bootle</h1>
+                <div class="search">
+                    <span>
+                        <input type="text" placeholder="Search Bootle or type a URL (not really tho)">
+                        <a href="info.html" target="_blank"><button>Search</button></a>
+                    </span>
+                </div>
             </div>
-            <div class="links">
-                <img class="profile" src="images/Profile.PNG">
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">About Us</a></li>
-            </div>
-        </ul>
-        <div class="central">
-            Google
-            <div class="search">
-                <span>
-                    <input type="text" placeholder="Enter text">
-                    <button type="button">Submit</button>
-                </span>
+            <div class="footer">
+                Made by Daniel Ayoung-Chee © 09/15/2023
             </div>
         </div>
     </body>
