--- a/exer3/google.html
+++ b/exer3/google.html
@@ -3,8 +3,8 @@
 
 <html>
     <head>
-        <title>Search Engine</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>Bootle!</title>
+        <link rel="stylesheet" href="styles1.css">
     </head>
     <body>
         <div class="body">
@@ -15,7 +15,7 @@
                 </div>
                 <div class="links">
                     <img class="profile" src="images/Profile.PNG">
-                    <li><a href="#">Images</a></li>
+                    <li><a href="#"  onClick=alert()>Images</a></li>
                     <li><a href="#">Bmail</a></li>
                     <li><a href="#">About Us</a></li>
                 </div>
