--- a/exer3/google.html
+++ b/exer3/google.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="body">
-            <ul class="navbar">
+            <ul class="navbar" id="navbar">
                 <div class="logo">
                     <li><img src="images/icon.png" alt="icon.png"></li>
                     <li>Bootle</li>
@@ -21,7 +21,7 @@
                 </div>
             </ul>
             <div class="central">
-                <h1>Bootle</h1>
+                <h1 id="aboutUs">Bootle</h1>
                 <div class="search">
                     <span>
                         <input type="text" placeholder="Search Bootle or type a URL (not really tho)">
@@ -48,6 +48,6 @@
             alert("Are you absolutely sure that you want to proceed to the next page?");
         });
         </script>
-
+        <script src="index.js" type="text/javascript"></script>
     </body>
 </html>
