--- a/exer3/index.html
+++ b/exer3/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Weather Website</title>
+        <title>Weather Webssite</title>
     </head>
     <body>
         <h1>Here is the weather</h1>
